--- a/presets.ini
+++ b/presets.ini
@@ -15,19 +15,19 @@ description = False color Near-Infrared (RGB221)
 category = Basic Composites
 author = Xerbo
 imagers = AVHRR|MSU-MR|VIRR
-expression = rgb(ch2, ch2, ch1)
+expression = ch2, ch2, ch1
 [SWIR]
 description = False color Shortwave-Infrared (RGB321, RGB621 on FengYun)
 category = Basic Composites
 author = Xerbo
 imagers = AVHRR|MSU-MR|VIRR
-expression = rgb(SWIR, ch2, ch1)
+expression = SWIR, ch2, ch1
 [RGB]
 description = Visible light composite (RGB197)
 category = Basic Composites
 author = Xerbo
 imagers = VIRR
-expression = rgb(ch1, ch9, ch7)
+expression = ch1, ch9, ch7
 
 # Blended composites
 # (goal is to produce satisfying false color)
@@ -36,25 +36,25 @@ description = 50/50 mix of SWIR and NIR
 category = Blended Composites
 author = peter kooistra
 imagers = MSU-MR|AVHRR|VIRR
-expression = rgb(SWIR*0.5+ch2*0.5, ch2, ch1)
+expression = SWIR*0.5+ch2*0.5, ch2, ch1
 [CSWIR]
 description = False color Combined Shortwave-Infrared
 category = Blended Composites
 author = dereksgc
 imagers = MSU-MR|AVHRR|VIRR
-expression = rgb(max(SWIR,min(ch2,ch1)), ch2, ch1)
+expression = max(SWIR,min(ch2,ch1)), ch2, ch1
 [NCNIR]
 description = Natural Color Near-Infrared
 category = Blended Composites
 author = dereksgc
 imagers = VIRR
-expression = rgb(0.7*ch1+0.3*ch2, 0.7*ch9+0.3*ch2, 0.7*ch7+0.3*ch1)
+expression = 0.7*ch1+0.3*ch2, 0.7*ch9+0.3*ch2, 0.7*ch7+0.3*ch1
 [NCSWIR]
 description = Natural Color Shortwave-Infrared
 category = Blended Composites
 author = dereksgc
 imagers = VIRR
-expression = rgb(0.7*ch1+0.3*(max(ch6,min(ch2,ch1))), 0.8*ch9+0.2*ch2, 0.7*ch7+0.3*ch1)
+expression = 0.7*ch1+0.3*(max(ch6,min(ch2,ch1))), 0.8*ch9+0.2*ch2, 0.7*ch7+0.3*ch1
 
 # Additional products
 # (generates an image for informative purposes, e.g. NDVI)
@@ -63,10 +63,10 @@ description = Normalized Difference Vegetation Index
 category = Additional Products
 author = Xerbo
 imagers = AVHRR|MSU-MR|VIRR
-expression = bw(((ch2-ch1)/(ch2+ch1)+1)/2)
+expression = ((ch2-ch1)/(ch2+ch1)+1)/2
 [NDVI+NIR]
 description = Normalized Difference Vegetation Index with NIR false color overlay
 category = Additional Products
 author = dereksgc
 imagers = AVHRR|VIRR
-expression = rgb(ch2, max(ch2, (ch2-ch1)/(ch2+ch1)), ch1)
+expression = ch2, max(ch2, (ch2-ch1)/(ch2+ch1)), ch1
