--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,14 @@ name: Build
 on:
   push:
     branches: [ master ]
+    paths-ignore:
+      - '**.md'
+      - 'images/**'
   pull_request:
     branches: [ master ]
+    paths-ignore:
+      - '**.md'
+      - 'images/**'
 
 env:
   BUILD_TYPE: Release
