--- a/presets.ini
+++ b/presets.ini
@@ -28,6 +28,12 @@ category = Basic Composites
 author = Xerbo
 imagers = VIRR
 expression = ch1, ch9, ch7
+[MHS FC]
+description = Basic MHS false color
+category = Basic Composites
+author = dereksgc
+imagers = MHS
+expression = ch1, ch1, ch2
 
 # Blended composites
 # (goal is to produce satisfying false color)
@@ -37,6 +43,12 @@ category = Blended Composites
 author = peter kooistra
 imagers = MSU-MR|AVHRR|VIRR
 expression = SWIR*0.5+ch2*0.5, ch2, ch1
+[CSWIR+NIR]
+description = 50/50 mix of SWIR and NIR
+category = Blended Composites
+author = peter kooistra / dereksgc
+imagers = MSU-MR|AVHRR|VIRR
+expression = 0.5*max(SWIR,min(ch2,ch1)) + 0.5*ch2, ch2, ch1
 [CSWIR]
 description = False color Combined Shortwave-Infrared
 category = Blended Composites
@@ -48,13 +60,13 @@ description = Natural Color Near-Infrared
 category = Blended Composites
 author = dereksgc
 imagers = VIRR
-expression = 0.7*ch1+0.3*ch2, 0.7*ch9+0.3*ch2, 0.7*ch7+0.3*ch1
+expression = 0.8*ch1+0.2*ch2, 0.8*ch9+0.2*ch2, 0.7*ch7+0.3*ch1
 [NCSWIR]
 description = Natural Color Shortwave-Infrared
 category = Blended Composites
 author = dereksgc
 imagers = VIRR
-expression = 0.7*ch1+0.3*(max(ch6,min(ch2,ch1))), 0.8*ch9+0.2*ch2, 0.7*ch7+0.3*ch1
+expression = 0.7*ch1+0.3*(max(ch6,min(ch2,ch1))), 0.85*ch9+0.15*ch2, 0.7*ch7+0.3*ch1
 
 # Additional products
 # (generates an image for informative purposes, e.g. NDVI)
@@ -64,9 +76,9 @@ category = Additional Products
 author = Xerbo
 imagers = AVHRR|MSU-MR|VIRR
 expression = ((ch2-ch1)/(ch2+ch1)+1)/2
-[NDVI+NIR]
-description = Normalized Difference Vegetation Index with NIR false color overlay
-category = Additional Products
-author = dereksgc
-imagers = AVHRR|VIRR
-expression = ch2, max(ch2, (ch2-ch1)/(ch2+ch1)), ch1
+#[NDVI+NIR] # Needs tweaking
+#description = Normalized Difference Vegetation Index with NIR false color overlay
+#category = Additional Products
+#author = dereksgc
+#imagers = AVHRR|VIRR
+#expression = ch2, max(ch2, (ch2-ch1)/(ch2+ch1)), ch1
