Initial LRPT support

--- a/projection.ini
+++ b/projection.ini
@@ -24,10 +24,10 @@ roll = -0.2
 pitch = 0.3
 toffset = 0.0
 [MetOp-C_AVHRR]
-fov = 55.2
-yaw = 0.3
-roll = -0.2
-pitch = 0.3
+fov = 55.1
+yaw = 0.2
+roll = -0.15
+pitch = 0.2
 toffset = 0.0
 
 [MetOp-A_MHS]
@@ -55,6 +55,12 @@ yaw = 2.3
 roll = -0.18
 pitch = -0.1
 toffset = 0
+[Meteor-M2_MSU-MR]
+fov = 55.25
+yaw = 2.26
+roll = 2.0
+pitch = 0.0
+toffset = 0.0
 
 [FengYun-3C_VIRR]
 fov = 55.31
