Small things, expand for details Remove libcorrect from help window Add padding around bounding box when generating map overlay Fix FY-3B channel 10 calibration Better projection information for MetOp-B

--- a/calibration.ini
+++ b/calibration.ini
@@ -199,10 +199,10 @@ b = -1.0280
 [FengYun-3B_VIRR/9]
 a = 0.0803
 b = -0.9636
-
-[FengYun-3C_VIRR/10]
+[FengYun-3B_VIRR/10]
 a = 0.0630
 b = -0.7628
+
 [FengYun-3C_VIRR/1]
 a = 0.1264
 b = -1.4320
