--- a/LeanHRPT-Decode.desktop
+++ b/LeanHRPT-Decode.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
-Name=LeanHRPT Decode
-Exec=LeanHRPT-Decode
-Icon=logo128
 Type=Application
-Categories=Graphics;Science
+Name=LeanHRPT Decode
+Comment=An easy to use HRPT decoder
+Categories=HamRadio;Science
+Exec=@CMAKE_INSTALL_PREFIX@/bin/LeanHRPT-Decode
+Icon=@CMAKE_INSTALL_PREFIX@/share/icons/LeanHRPT-Decode.png
