--- a/images/.gitattributes
+++ b/images/.gitattributes
@@ -2,3 +2,4 @@ fy.webp filter=lfs diff=lfs merge=lfs -text
 ir.webp filter=lfs diff=lfs merge=lfs -text
 metop.webp filter=lfs diff=lfs merge=lfs -text
 mhs.png filter=lfs diff=lfs merge=lfs -text
+gui.webp filter=lfs diff=lfs merge=lfs -text
