--- a/projection.ini
+++ b/projection.ini
@@ -55,6 +55,14 @@ yaw = 2.3
 roll = -0.18
 pitch = -0.1
 toffset = 0
+[Meteor-M22_MTVZA]
+curved = true
+fov = 52
+yaw = 5
+roll = 0
+pitch = -53.3
+pitchscale = 0.9
+toffset = 0
 [Meteor-M2_MSU-MR]
 fov = 55.25
 yaw = 2.26
