--- a/presets.ini
+++ b/presets.ini
@@ -82,3 +82,21 @@ expression = ((ch2-ch1)/(ch2+ch1)+1)/2
 #author = dereksgc
 #imagers = AVHRR|VIRR
 #expression = ch2, max(ch2, (ch2-ch1)/(ch2+ch1)), ch1
+[HIRS False]
+description = An HRIS composite
+category = Basic Composites
+author = Zeke800
+imagers = HIRS
+expression = ch6, ch7, ch7
+[MTVZA False]
+description = An MTVZA color composite
+category = Basic Composites
+author = Zeke800
+imagers = MTVZA
+expression = ch8, ch7, ch9
+[MTVZA Color]
+description = An MTVZA composite
+category = Basic Composites
+author = Zeke800
+imagers = MTVZA
+expression = ch1, ch7, ch15
