Oops... wrong descriptions (swapped)

--- a/presets.ini
+++ b/presets.ini
@@ -89,14 +89,20 @@ author = Zeke800
 imagers = HIRS
 expression = ch6, ch7, ch7
 [MTVZA False]
-description = An MTVZA color composite
+description = An MTVZA composite
 category = Basic Composites
 author = Zeke800
 imagers = MTVZA
 expression = ch8, ch7, ch9
 [MTVZA Color]
-description = An MTVZA composite
+description = An MTVZA color composite
 category = Basic Composites
 author = Zeke800
 imagers = MTVZA
 expression = ch1, ch7, ch15
+[LowandHigh]
+description = Utilizes the high-GHz and low-GHz channels to create an image of only clouds.
+category = Basic Composites
+author = Zeke800
+imagers = MTVZA
+expression = ch29, ch28, ch1
