--- a/presets.ini
+++ b/presets.ini
@@ -89,13 +89,7 @@ author = Zeke800
 imagers = HIRS
 expression = ch6, ch7, ch7
 [MTVZA False]
-description = An MTVZA composite
-category = Basic Composites
-author = Zeke800
-imagers = MTVZA
-expression = ch8, ch7, ch9
-[MTVZA Color]
-description = An MTVZA color composite
+description = An MTVZA false-color composite
 category = Basic Composites
 author = Zeke800
 imagers = MTVZA
