New presets for Meteor

--- a/presets.ini
+++ b/presets.ini
@@ -10,6 +10,12 @@
 
 # Basic composites
 # (same can be replicated with GUI compositor)
+[VIS+IR]
+description = IR mixed with visible (or near-ir, anyways).
+category = Basic Composites
+author = Zeke800
+imagers = MSU-MR
+expression = ch1, ch4, ch5
 [NIR]
 description = False color Near-Infrared (RGB221)
 category = Basic Composites
