--- a/presets.ini
+++ b/presets.ini
@@ -100,3 +100,9 @@ category = Basic Composites
 author = Zeke800
 imagers = MTVZA
 expression = ch29, ch28, ch1
+[ch4-ch5]
+description = Volcanic ash
+category = Additional Products
+author = Xerbo
+imagers = AVHRR|VIRR
+expression = ch4-ch5
