--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,6 +80,7 @@ jobs:
             cp build/LeanHRPT-Decode.desktop     LeanHRPT-Decode.AppDir/ &&
             cp logo128.png                       LeanHRPT-Decode.AppDir/usr/share/icons/LeanHRPT-Decode.png &&
             cp presets.ini                       LeanHRPT-Decode.AppDir/ &&
+            cp gradients.ini                     LeanHRPT-Decode.AppDir/ &&
             cp calibration.ini                   LeanHRPT-Decode.AppDir/ &&
             cp projection.ini                    LeanHRPT-Decode.AppDir/ &&
             cp -r $TEMP_PATH/plugins/platforms/                        LeanHRPT-Decode.AppDir/usr/plugins/ &&
@@ -197,6 +198,7 @@ jobs:
             mkdir LeanHRPT-Decode/platforms &&
             cp logo128.png                                             LeanHRPT-Decode/ &&
             cp presets.ini                                             LeanHRPT-Decode/ &&
+            cp gradients.ini                                           LeanHRPT-Decode/ &&
             cp calibration.ini                                         LeanHRPT-Decode/ &&
             cp projection.ini                                          LeanHRPT-Decode/ &&
             cp build/LeanHRPT-Decode.exe                               LeanHRPT-Decode/ &&
