--- a/presets.ini
+++ b/presets.ini
@@ -8,6 +8,9 @@
 #  in order to be parsed, entries without these will simply be ignored.
 #
 
+# Presets for uncalibrated imagers will not function reliably over multiple files;
+# MSU-MR, MTVZA, HIRS, MHS
+
 # Basic composites
 # (same can be replicated with GUI compositor)
 [NIR]
@@ -34,6 +37,24 @@ category = Basic Composites
 author = dereksgc
 imagers = MHS
 expression = ch1, ch1, ch2
+[HIRS FC]
+description = Basic HIRS false color
+category = Basic Composites
+author = Zeke800
+imagers = HIRS
+expression = ch6, ch7, ch7
+[MTVZA FC]
+description = Basic MTVZA false color
+category = Basic Composites
+author = Zeke800
+imagers = MTVZA
+expression = ch1, ch7, ch15
+[Low/High]
+description = Utilizes the high-GHz and low-GHz channels to create an image of only clouds
+category = Basic Composites
+author = Zeke800
+imagers = MTVZA
+expression = ch29, ch28, ch1
 
 # Blended composites
 # (goal is to produce satisfying false color)
@@ -44,7 +65,7 @@ author = peter kooistra
 imagers = MSU-MR|AVHRR|VIRR
 expression = SWIR*0.5+ch2*0.5, ch2, ch1
 [CSWIR+NIR]
-description = 50/50 mix of SWIR and NIR
+description = 50/50 mix of CSWIR and NIR
 category = Blended Composites
 author = peter kooistra / dereksgc
 imagers = MSU-MR|AVHRR|VIRR
@@ -76,32 +97,8 @@ category = Additional Products
 author = Xerbo
 imagers = AVHRR|MSU-MR|VIRR
 expression = ((ch2-ch1)/(ch2+ch1)+1)/2
-#[NDVI+NIR] # Needs tweaking
-#description = Normalized Difference Vegetation Index with NIR false color overlay
-#category = Additional Products
-#author = dereksgc
-#imagers = AVHRR|VIRR
-#expression = ch2, max(ch2, (ch2-ch1)/(ch2+ch1)), ch1
-[HIRS False]
-description = An HRIS composite
-category = Basic Composites
-author = Zeke800
-imagers = HIRS
-expression = ch6, ch7, ch7
-[MTVZA False]
-description = An MTVZA false-color composite
-category = Basic Composites
-author = Zeke800
-imagers = MTVZA
-expression = ch1, ch7, ch15
-[LowandHigh]
-description = Utilizes the high-GHz and low-GHz channels to create an image of only clouds.
-category = Basic Composites
-author = Zeke800
-imagers = MTVZA
-expression = ch29, ch28, ch1
-[ch4-ch5]
-description = Volcanic ash
+[Volcanic ash]
+description = Difference between 10.8 and 12.0 micron bands
 category = Additional Products
 author = Xerbo
 imagers = AVHRR|VIRR
