--- a/presets.ini
+++ b/presets.ini
@@ -13,6 +13,12 @@
 
 # Basic composites
 # (same can be replicated with GUI compositor)
+[Day Microphysics]
+description = Daytime Microphysics
+category = Basic Composites
+author = Zeke800
+imagers = MSU-MR
+expression = ch1, ch4, ch5
 [NIR]
 description = False color Near-Infrared (RGB221)
 category = Basic Composites
