--- a/presets.ini
+++ b/presets.ini
@@ -48,7 +48,7 @@ description = Basic HIRS false color
 category = Basic Composites
 author = Zeke800
 imagers = HIRS
-expression = ch6, ch7, ch7
+expression = ch8, ch10, ch6
 [MTVZA FC]
 description = Basic MTVZA false color
 category = Basic Composites
@@ -109,3 +109,17 @@ category = Additional Products
 author = Xerbo
 imagers = AVHRR|VIRR
 expression = ch4-ch5
+
+# Dynamic presets
+# (changes depending on the imager)
+[Automatic]
+description = Automatically selects a suitable preset
+category = Dynamic Presets
+author = Xerbo
+imagers = AVHRR|MSU-MR|VIRR|MHS|HIRS|MTVZA
+expression:AVHRR = ${NIR:expression}
+expression:MSU-MR = ${CSWIR:expression}
+expression:VIRR = ${NCSWIR:expression}
+expression:MHS = ${MHS FC:expression}
+expression:HIRS = ${HIRS FC:expression}
+expression:MTVZA = ${MTVZA FC:expression}
