Update NIR preset

--- a/presets.ini
+++ b/presets.ini
@@ -19,12 +19,6 @@ category = Basic Composites
 author = Zeke800
 imagers = MSU-MR
 expression = ch1, ch4, ch5
-[NIR]
-description = False color Near-Infrared (RGB221)
-category = Basic Composites
-author = Xerbo
-imagers = AVHRR|MSU-MR|VIRR
-expression = ch2, ch2, ch1
 [SWIR]
 description = False color Shortwave-Infrared (RGB321, RGB621 on FengYun)
 category = Basic Composites
@@ -64,6 +58,12 @@ expression = ch29, ch28, ch1
 
 # Blended composites
 # (goal is to produce satisfying false color)
+[NIR]
+description = False color Near-Infrared (RGB121 + RGB221)
+category = Basic Composites
+author = Xerbo
+imagers = AVHRR|MSU-MR|VIRR
+expression = ch2*0.6 + min(ch1,ch2)*0.4, ch2, ch1
 [SWIR+NIR]
 description = 50/50 mix of SWIR and NIR
 category = Blended Composites
