Add NASA NDVI color table

--- a/gradients.ini
+++ b/gradients.ini
@@ -10,3 +10,6 @@ map = 0101AC,0105EF,043FFC,1999FB,2BDEFA,42E0E3,54B7BB,5B7F80,73635B,A3633D,CB63
 [Rainbow]
 author = FLIR
 map = 01054E,01297A,0246A6,045ECF,037AD3,169491,5EB42B,A9CC03,DED403,F4C709,FBA313,FD5F2A,FA1F3E,F73959,FA807C,FDC8AE
+[NDVI]
+author = NASA
+map = E3D6C6,E3D6C6,E3D6C6,E3D6C6,E3D6C6,E3D6C6,E3D6C6,E3D6C6,E3D6C6,E3D6C6,CFC0A2,B9AC7C,A19B52,85892E,6B771F,526321,3C4E20,263F08,132D02,132D02
