Default values for command line usage

--- a/presets.ini
+++ b/presets.ini
@@ -123,3 +123,11 @@ expression:VIRR = ${NCSWIR:expression}
 expression:MHS = ${MHS FC:expression}
 expression:HIRS = ${HIRS FC:expression}
 expression:MTVZA = ${MTVZA FC:expression}
+[Thermal]
+description = Automatically selects the thermal channel
+category = Dynamic Presets
+author = Xerbo
+imagers = AVHRR|MSU-MR|VIRR|HIRS
+expression = ch4
+expression:MSU-MR = 1-ch5
+expression:HIRS = ch8
