--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,10 +38,12 @@ find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Network REQUIRED)
 target_link_libraries(LeanHRPT-Decode PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 target_link_libraries(LeanHRPT-Decode PRIVATE Qt${QT_VERSION_MAJOR}::Network)
 
-find_library(MUPARSER_PATH NAMES muparser NO_CACHE)
+find_library(MUPARSER_PATH NAMES muparser NO_CACHE REQUIRED)
 target_link_libraries(LeanHRPT-Decode PUBLIC ${MUPARSER_PATH})
-find_library(LIBPREDICT_PATH NAMES predict NO_CACHE)
+find_library(LIBPREDICT_PATH NAMES predict NO_CACHE REQUIRED)
 target_link_libraries(LeanHRPT-Decode PUBLIC ${LIBPREDICT_PATH})
+find_library(SHAPELIB_PATH NAMES shp NO_CACHE REQUIRED)
+target_link_libraries(LeanHRPT-Decode PUBLIC ${SHAPELIB_PATH})
 
 find_package(OpenMP)
 if(OpenMP_CXX_FOUND)
