--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -112,10 +112,20 @@ jobs:
             strip LeanHRPT-Decode.AppDir/usr/bin/LeanHRPT-Decode &&
             ./appimagetool-x86_64.AppImage LeanHRPT-Decode.AppDir'
 
+    - name: Package tools
+      run: 'mkdir tools &&
+            cp build/tools/vcdu2cadu tools/ &&
+            tar -cf tools_linux_x86-64.tar tools'
+
     - uses: actions/upload-artifact@v2
       with:
         name: LeanHRPT_Decode-x86_64.AppImage
         path: ./LeanHRPT_Decode-x86_64.AppImage
+
+    - uses: actions/upload-artifact@v2
+      with:
+        name: tools_linux_x86-64.tar
+        path: ./tools_linux_x86-64.tar
 
   build_debian:
     strategy:
@@ -222,6 +232,7 @@ jobs:
             cp calibration.ini                                         LeanHRPT-Decode/ &&
             cp projection.ini                                          LeanHRPT-Decode/ &&
             cp build/LeanHRPT-Decode.exe                               LeanHRPT-Decode/ &&
+            cp build/tools/vcdu2cadu.exe                               LeanHRPT-Decode/ &&
             cp $WIN_TEMP_PATH/bin/Qt5Core.dll                          LeanHRPT-Decode/ &&
             cp $WIN_TEMP_PATH/bin/Qt5Network.dll                       LeanHRPT-Decode/ &&
             cp $WIN_TEMP_PATH/bin/Qt5Gui.dll                           LeanHRPT-Decode/ &&
